<resources>
    <string name="app_name">Simple Notepad</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="write">Write</string>
    <string name="share">Share memo</string>
    <string name="delete_memo">Delete memo</string>
    <string name="none">None</string>
    <string name="seven_day">7 days</string>
    <string name="thirty_day">30 days</string>
    <string name="auto_delete">Auto delete trash</string>
    <string name="big_size">Large</string>
    <string name="middle_size">Medium</string>
    <string name="small_size">Small</string>
    <string name="text_size">Text size</string>
    <string name="restore">Restore memo</string>
    <string name="memo_share_app_select">Choose an app to share the memo</string>
    <string name="alter">Notice</string>
    <string name="exit_app">Do you want to exit the memo app?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all_memo">All Memos</string>
    <string name="setting">Settings</string>
    <string name="trash">Trash</string>
    <string name="select_memo">Multiple Deletion</string>
    <string name="input_folder_name">Please enter folder name</string>
    <string name="remove_all_memo">The entire memo data is deleted.</string>
    <string name="exit_memo_app">Exit Memo App</string>
    <string name="new_folder">Add Folder</string>
    <string name="memo_reset">Initialize Memo</string>
    <string name="manage_folder">Manage folders</string>
    <string name="edit_folder_name">Modify folder name</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="dialog_delete_folder_message">Are you sure you want to delete this folder?</string>
    <string name="input_search_keyword">Please enter a search term</string>
    <string name="add_folder">Add Folder</string>
    <string name="memo_delete_check">Confirm Delete Memo</string>
    <string name="delete_memo_confirmation">Are you sure you want to delete %1$d memos?</string>
    <string name="delete_memo_permanently_confirmation">Are you sure you want to permanently delete %1$d memos?</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="more_options">More</string>
    <string name="error_folder_name_exists">Folder name already exists</string>
    <string name="none_select_memo">No memo selected</string>
    <string name="no_folders_to_manage">There are no folders to manage.</string>
    <string name="all_memos_deleted">All memo data has been deleted</string>
    <string name="settings_etc">Other Settings</string>
    <string name="my_folder">My folder</string>
    <string name="empty_memo_list">Memo does not exist</string>
    <string name="edit">Edit</string>
    <string name="delete_single_memo">Are you sure you want to permanently delete the memo?</string>
    <string name="review">Writing App Reviews</string>
    <string name="update">Proceed with the update</string>
    <string name="empty_trash">No deleted memos</string>
    <string name="empty_memo">No Memo Written</string>
    <string name="update_cancel">Cancel app updates</string>
    <string name="app_version">Check App Version</string>
    <string name="app_version_prefix">Current App Version :</string>
    <string name="choice_memo">Select Memo</string>
</resources>
