<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/text_size"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/text_size_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_small"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/small_size"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_medium"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/middle_size"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_large"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/big_size"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/auto_delete"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/delete_cycle_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_never"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7days"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven_day"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_30days"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thirty_day"
                app:backgroundTint="@color/selector_toggle_background"
                app:cornerRadius="0dp"
                app:strokeColor="@color/selector_toggle_stroke"
                app:strokeWidth="1dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="기타 설정"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manage_folder"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/manage_folder"
            app:backgroundTint="@color/selector_toggle_background"
            app:cornerRadius="0dp"
            app:strokeColor="@color/selector_toggle_stroke"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/memo_all_delete"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/memo_reset"
            android:textColor="#FF0000"
            app:backgroundTint="@color/selector_toggle_background"
            app:cornerRadius="0dp"
            app:strokeColor="@color/selector_toggle_stroke"
            app:strokeWidth="1dp" />


    </LinearLayout>
</ScrollView>