<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="#FE353333"
        android:drawableLeft="@drawable/ic_create_new_folder_white"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:text="@string/add_folder"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_edittext_folder"
        android:hint="@string/input_folder_name"
        android:inputType="text"
        android:padding="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>